style: fix timeline custom dot props not align

--- a/packages/semi-foundation/timeline/timeline.scss
+++ b/packages/semi-foundation/timeline/timeline.scss
@@ -50,20 +50,6 @@ $module: #{$prefix}-timeline;
             }
         }
 
-        &-head-custom {
-            position: absolute;
-            display: flex;
-            align-self: center;
-            top: $spacing-timeline_head_custom-top;
-            left: $spacing-timeline_head_custom-left;
-            width: $width-timeline_head_custom;
-            height: $height-timeline_head_custom;
-            // text-align: center;
-            border: $width-timeline_head_custom-border;
-            border-radius: $radius-timeline_head_custom;
-            transform: $motion-timeline_head_custom-transform;
-        }
-
         .#{$module}-item-head-custom.#{$module}-item-head-ongoing {
             background-color: $color-timeline_item_head-bg;
             color: $color-timeline_dot_default-bg-default;
@@ -108,6 +94,22 @@ $module: #{$prefix}-timeline;
             .#{$module}-item-tail {
                 border-left: none;
             }
+        }
+    }
+
+    &-alternate {
+        .#{$module}-item-head.#{$module}-item-head-custom {
+            position: absolute;
+            display: flex;
+            align-self: center;
+            margin-left: 0;
+            top: $spacing-timeline_head_custom-top;
+            width: $width-timeline_head_custom;
+            height: $height-timeline_head_custom;
+            // text-align: center;
+            border: $width-timeline_head_custom-border;
+            border-radius: $radius-timeline_head_custom;
+            transform: $motion-timeline_head_custom-transform;
         }
     }
 
